--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   {
       "name": "Nokia Secure MVP Design",
       "version": "0.1.0",
-      "private": true,
+      "private": false,
       "dependencies": {
           "@radix-ui/react-accordion": "^1.2.3",
           "@radix-ui/react-alert-dialog": "^1.1.6",
